--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=7.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "tools\\": "src/"
+    }
   }
 }
