--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "li-guangchang/tools",
-  "description": "description",
+  "description": "a php common tools",
   "minimum-stability": "stable",
   "license": "Apache-2.0",
   "authors": [
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=7.4"
+    "php": ">=7.4",
+    "ext-openssl": "*"
   },
   "autoload": {
     "psr-4": {
