--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": ">=7.4",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "ext-calendar": "*"
   },
   "autoload": {
     "psr-4": {
